feat: fiat invoicing
